--- a/semsterproject/semsterproject/semsterproject.csproj
+++ b/semsterproject/semsterproject/semsterproject.csproj
@@ -56,6 +56,12 @@
     <Compile Include="addquestion.Designer.cs">
       <DependentUpon>addquestion.cs</DependentUpon>
     </Compile>
+    <Compile Include="deletequestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="deletequestion.Designer.cs">
+      <DependentUpon>deletequestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Exam.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,17 +88,56 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreCard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScoreCard.Designer.cs">
+      <DependentUpon>ScoreCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="signup.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="signup.Designer.cs">
       <DependentUpon>signup.cs</DependentUpon>
     </Compile>
+    <Compile Include="StudentExam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentExam.Designer.cs">
+      <DependentUpon>StudentExam.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Studentlogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Studentlogin.Designer.cs">
+      <DependentUpon>Studentlogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StudentRegisteration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentRegisteration.Designer.cs">
+      <DependentUpon>StudentRegisteration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="updatequestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="updatequestion.Designer.cs">
+      <DependentUpon>updatequestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Viewquestions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Viewquestions.Designer.cs">
+      <DependentUpon>Viewquestions.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="addpanel.resx">
       <DependentUpon>addpanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="addquestion.resx">
       <DependentUpon>addquestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="deletequestion.resx">
+      <DependentUpon>deletequestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Exam.resx">
       <DependentUpon>Exam.cs</DependentUpon>
@@ -115,8 +160,26 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ScoreCard.resx">
+      <DependentUpon>ScoreCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="signup.resx">
       <DependentUpon>signup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentExam.resx">
+      <DependentUpon>StudentExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Studentlogin.resx">
+      <DependentUpon>Studentlogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentRegisteration.resx">
+      <DependentUpon>StudentRegisteration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="updatequestion.resx">
+      <DependentUpon>updatequestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Viewquestions.resx">
+      <DependentUpon>Viewquestions.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
